force-app/main/default/objects/Voo__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <description>Informa o tipo de transporte realizado pelo voo.</description>
    <inlineHelpText>Informs the type of transport performed by the flight.</inlineHelpText>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TipoVoo</valueSetName>
    </valueSet>
</CustomField>