force-app/main/default/objects/Voo__c/fields/TipoPAD__c.field-meta.xml
<CustomField>
    <fullName>TipoPAD__c</fullName>
    <description>Indica como o voo PAD é classificado em função da rota, ocupação, aeronave e rota do PAD.</description>
    <inlineHelpText>Indica como o voo PAD é classificado em função da rota, ocupação, aeronave e rota do PAD.</inlineHelpText>
    <label>Modalidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Especial</fullName>
            </value>
            <value>
                <fullName>Aeromédico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>