force-app/main/default/objects/Voo__c/fields/TotalHorasVoadas__c.field-meta.xml
<CustomField>
    <fullName>TotalHorasVoadas__c</fullName>
    <description>Armazena o total de horas voadas no voo</description>
    <inlineHelpText>Armazena o total de horas voadas no voo</inlineHelpText>
    <label>Total de horas voadas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>