force-app/main/default/objects/Voo__c/fields/TotalPassageiros__c.field-meta.xml
<CustomField>
    <fullName>TotalPassageiros__c</fullName>
    <description>Quantidade de passageiros no voo. 
Campo populado ao final do voo.</description>
    <inlineHelpText>Quantidade de passageiros no voo</inlineHelpText>
    <label>Total de Passageiros</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>