force-app/main/default/objects/Voo__c/fields/Transferido__c.field-meta.xml
<CustomField>
    <fullName>Transferido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transferido</label>
    <type>Checkbox</type>
</CustomField>