force-app/main/default/objects/Voo__c/fields/TrechosNaoIniciados__c.field-meta.xml
<CustomField>
    <fullName>TrechosNaoIniciados__c</fullName>
    <description>Indica a quantidade trechos do voo que ainda não foram iniciados e permitem a atualização de dados</description>
    <inlineHelpText>Indica a quantidade trechos do voo que ainda não foram iniciados</inlineHelpText>
    <label>Trechos Não Iniciados</label>
    <summaryFilterItems>
        <field>Trecho__c.Status__c</field>
        <operation>equals</operation>
        <value>Não Iniciado</value>
    </summaryFilterItems>
    <summaryForeignKey>Trecho__c.Voo__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>