force-app/main/default/objects/Voo__c/fields/TrocaTurma__c.field-meta.xml
<CustomField>
    <fullName>TrocaTurma__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>É um voo de Sísmica com troca de turma?</inlineHelpText>
    <label>Troca de Turma</label>
    <type>Checkbox</type>
</CustomField>