force-app/main/default/objects/Voo__c/fields/UltimoTrecho__c.field-meta.xml
<CustomField>
    <fullName>UltimoTrecho__c</fullName>
    <description>Resumo de totalização com o número da ordem de execução do último trecho do voo</description>
    <inlineHelpText>Resumo de totalização com o número da ordem de execução do último trecho do voo</inlineHelpText>
    <label>Último Trecho</label>
    <summarizedField>Trecho__c.OrdemExecucao__c</summarizedField>
    <summaryFilterItems>
        <field>Trecho__c.Tipo__c</field>
        <operation>notEqual</operation>
        <value>Translado</value>
    </summaryFilterItems>
    <summaryForeignKey>Trecho__c.Voo__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>