force-app/main/default/objects/Voo__c/fields/URLComunidade__c.field-meta.xml
<CustomField>
    <fullName>URLComunidade__c</fullName>
    <description>Url deste voo na comunidade</description>
    <formula>$Setup.ConfiguracoesGerais__c.URLComunidade__c &amp; &apos;/&apos; &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Url deste voo na comunidade</inlineHelpText>
    <label>URL Comunidade</label>
    <type>Text</type>
</CustomField>