force-app/main/default/objects/Voo__c/fields/ValorHoraCorte__c.field-meta.xml
<CustomField>
    <fullName>ValorHoraCorte__c</fullName>
    <description>Valor da hora durante o corte</description>
    <inlineHelpText>Valor da hora durante o corte</inlineHelpText>
    <label>Valor da Hora em Corte</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>