force-app/main/default/objects/Voo__c/fields/ValorHoraVoada__c.field-meta.xml
<CustomField>
    <fullName>ValorHoraVoada__c</fullName>
    <description>Valor da hora voada</description>
    <inlineHelpText>Valor da hora voada</inlineHelpText>
    <label>Valor da Hora Voada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>