force-app/main/default/objects/Voo__c/fields/ValorMinutoCorte__c.field-meta.xml
<CustomField>
    <fullName>ValorMinutoCorte__c</fullName>
    <description>Valor da hora voada dividido por 60</description>
    <formula>ValorHoraCorte__c / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Valor do minuto em corte</inlineHelpText>
    <label>Valor do Minuto de Corte</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>