force-app/main/default/objects/Voo__c/fields/ValorMinutoVoado__c.field-meta.xml
<CustomField>
    <fullName>ValorMinutoVoado__c</fullName>
    <description>Valor da hora voada dividido por 60</description>
    <formula>ValorHoraVoada__c  / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Valor do minuto voado</inlineHelpText>
    <label>Valor do Minuto Voado</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>