force-app/main/default/objects/Voo__c/fields/VariacaoDistPAD__c.field-meta.xml
<CustomField>
    <fullName>VariacaoDistPAD__c</fullName>
    <description>Variação negativa ou positiva da distância da missão em relação à distância do PAD.</description>
    <formula>(PAD__r.Distancia_Km__c - Missao__r.DistanciaKm__c) / PAD__r.Distancia_Km__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Variação negativa ou positiva da distância da missão em relação à distância do PAD.</inlineHelpText>
    <label>Variação Dist. PAD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>