force-app/main/default/objects/Voo__c/fields/Vip__c.field-meta.xml
<CustomField>
    <fullName>Vip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vip</label>
    <type>Checkbox</type>
</CustomField>