force-app/main/default/objects/Voo__c/fields/VooAbandonado__c.field-meta.xml
<CustomField>
    <fullName>VooAbandonado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Voo Abandonado</label>
    <type>Checkbox</type>
</CustomField>