force-app/main/default/objects/Voo__c/fields/VooAtrasado__c.field-meta.xml
<CustomField>
    <fullName>VooAtrasado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Preenchido quando um voo tem um atraso superior à 10 minutos.</description>
    <label>Voo Atrasado?</label>
    <type>Checkbox</type>
</CustomField>