force-app/main/default/objects/Voo__c/fields/VooAtrasadoOMNI__c.field-meta.xml
<CustomField>
    <fullName>VooAtrasadoOMNI__c</fullName>
    <formula>AtrasoInicial__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Voo Atrasado OMNI</label>
    <type>Checkbox</type>
</CustomField>