force-app/main/default/objects/Voo__c/fields/VooPai__c.field-meta.xml
<CustomField>
    <fullName>VooPai__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo que referencia um voo para permitir a colisão de dois eventos de voo no modo de edição.</description>
    <inlineHelpText>Campo que referencia um voo para permitir a colisão de dois eventos de voo no modo de edição.</inlineHelpText>
    <label>Voo Pai</label>
    <referenceTo>Voo__c</referenceTo>
    <relationshipLabel>Voos</relationshipLabel>
    <relationshipName>Voos</relationshipName>
    <type>Lookup</type>
</CustomField>