force-app/main/default/objects/Voo__c/fields/VooRecuperacao__c.field-meta.xml
<CustomField>
    <fullName>VooRecuperacao__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica que esse voo foi transferido por uma necessidade operacional da Omni.</description>
    <inlineHelpText>Indica que esse voo foi transferido por uma necessidade operacional da Omni.</inlineHelpText>
    <label>Voo de Recuperação</label>
    <type>Checkbox</type>
</CustomField>