force-app/main/default/objects/Voo__c/validationRules/BloqueiaAvancoSemTrecho.validationRule-meta.xml
<ValidationRule>
    <fullName>BloqueiaAvancoSemTrecho</fullName>
    <active>true</active>
    <description>Não permite reserva de voo sem trecho</description>
    <errorConditionFormula>AND (
				NOT(IgnorarTrigger__c),
				OR(
								ISPICKVAL(Status__c , &apos;Pré-reservado&apos;),
								ISPICKVAL(Status__c , &apos;Reservado&apos;),
								ISPICKVAL(Status__c , &apos;Confirmado&apos;),
								ISPICKVAL(Status__c , &apos;Rota&apos;),
								ISPICKVAL(Status__c , &apos;Executado&apos;),
								ISPICKVAL(Status__c , &apos;Em faturamento&apos;),
								ISPICKVAL(Status__c , &apos;Faturado&apos;)
				),
				QtdTrechos__c &lt; 1
)</errorConditionFormula>
    <errorMessage>Não é possível avançar para esse status sem trecho definido</errorMessage>
</ValidationRule>