force-app/main/default/objects/Voo__c/validationRules/BloqueiaIntegracaoStar.validationRule-meta.xml
<ValidationRule>
    <fullName>BloqueiaIntegracaoStar</fullName>
    <active>true</active>
    <description>Star só pode realizar alterações até o Status = Executado</description>
    <errorConditionFormula>AND(
				$Setup.ConfiguracoesGerais__c.IdPerfilIntegracaoStar__c = $Profile.Id,
				OR(			
								ISPICKVAL(Status__c, &apos;Em Faturamento&apos;),
								ISPICKVAL(Status__c, &apos;Faturado&apos;)
								)
				)</errorConditionFormula>
    <errorMessage>Integração não permitida no Status atual</errorMessage>
</ValidationRule>