force-app/main/default/objects/Voo__c/validationRules/BloqueiaVooCancelado.validationRule-meta.xml
<ValidationRule>
    <fullName>BloqueiaVooCancelado</fullName>
    <active>true</active>
    <description>Não permite reativar um voo que foi cancelado</description>
    <errorConditionFormula>AND(
NOT(IgnorarTrigger__c),			
ISPICKVAL(PRIORVALUE(Status__c), &apos;Cancelado&apos;),
NOT(ISPICKVAL(Status__c, &apos;Cancelado&apos;))
    )</errorConditionFormula>
    <errorMessage>Este voo foi cancelado</errorMessage>
</ValidationRule>