force-app/main/default/objects/Voo__c/validationRules/Motivo_Cancelamento.validationRule-meta.xml
<ValidationRule>
    <fullName>Motivo_Cancelamento</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED(Status__c),
TEXT(Status__c) == &apos;Cancelado&apos;,
ISBLANK( MotivoCancelamento__c ))</errorConditionFormula>
    <errorDisplayField>MotivoCancelamento__c</errorDisplayField>
    <errorMessage>Campo obrigatório</errorMessage>
</ValidationRule>