force-app/main/default/objects/Voo__c/validationRules/NaoVoltaRascunho.validationRule-meta.xml
<ValidationRule>
    <fullName>NaoVoltaRascunho</fullName>
    <active>true</active>
    <description>A partir de reservado o voo não volta para rascunho.</description>
    <errorConditionFormula>AND(
				ISPICKVAL(Status__c, &apos;Rascunho&apos;),
				NOT(PRIORVALUE(StatusPermiteVoltarRascunho__c))
)</errorConditionFormula>
    <errorMessage>Um voo a partir de reservado não deve voltar para rascunho.</errorMessage>
</ValidationRule>