force-app/main/default/objects/Voo__c/validationRules/PrefixoObrigatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>PrefixoObrigatorio</fullName>
    <active>true</active>
    <description>Se o status do voo for diferente de cancelado, rascunho, pré-reservado ou reservado, é obrigatório o voo ter um prefixo definido.</description>
    <errorConditionFormula>AND(TEXT(Status__c) != &apos;Cancelado&apos;,
     TEXT(Status__c) != &apos;Rascunho&apos;,
				 TEXT(Status__c) != &apos;Pré-reservado&apos;,
     TEXT(Status__c) != &apos;Reservado&apos;,
     ISBLANK( Prefixo__c ),
     ISBLANK(  DescricaoIndisponibilidade__c )
)</errorConditionFormula>
    <errorMessage>Se o status do voo for diferente de cancelado, rascunho ou reservado, é obrigatório o voo ter um prefixo definido.</errorMessage>
</ValidationRule>