force-app/main/default/objects/Voo__c/validationRules/RegraCancelamento.validationRule-meta.xml
<ValidationRule>
    <fullName>RegraCancelamento</fullName>
    <active>true</active>
    <description>Até que Status é permitido o cancelamento</description>
    <errorConditionFormula>AND(
				ISPICKVAL(Status__c, &apos;Cancelado&apos;),
				ISCHANGED(Status__c),
    NOT(ISPICKVAL(PRIORVALUE(Status__c), &apos;Rascunho&apos;)),
				NOT(ISPICKVAL(PRIORVALUE(Status__c), &apos;Pré-reservado&apos;)),
				NOT(ISPICKVAL(PRIORVALUE(Status__c), &apos;Reservado&apos;)),
				NOT(ISPICKVAL(PRIORVALUE(Status__c), &apos;Confirmado&apos;))
				)</errorConditionFormula>
    <errorMessage>Não é possível cancelar um voo neste status.</errorMessage>
</ValidationRule>