force-app/main/default/objects/Voo__c/validationRules/SomenteAdmEditaVooCancelado.validationRule-meta.xml
<ValidationRule>
    <fullName>SomenteAdmEditaVooCancelado</fullName>
    <active>true</active>
    <description>Somente administradores podem editar voos cancelados</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;Administrador do sistema&quot;,
ISPICKVAL(PRIORVALUE(Status__c), &apos;Cancelado&apos;))</errorConditionFormula>
    <errorMessage>Um voo cancelado não pode ser editado</errorMessage>
</ValidationRule>