force-app/main/default/objects/Voo__c/validationRules/StatusObrigatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>StatusObrigatorio</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Status__c))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>O Status do Voo é obrigatório</errorMessage>
</ValidationRule>