force-app/main/default/objects/Voo__c/validationRules/TipoTreinamento.validationRule-meta.xml
<ValidationRule>
    <fullName>TipoTreinamento</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(Status__c) == &apos;Reservado&apos;,
TEXT(Tipo__c) == &apos;Treinamento&apos;,
ISBLANK(TEXT(SAR2__c)))</errorConditionFormula>
    <errorDisplayField>SAR2__c</errorDisplayField>
    <errorMessage>Preencha o tipo de treinamento</errorMessage>
</ValidationRule>