force-app/main/default/objects/Voo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DataVoo__c</columns>
    <columns>Cliente__c</columns>
    <columns>PrefixoTexto__c</columns>
    <columns>Tipo__c</columns>
    <columns>Status__c</columns>
    <columns>RotaAbreviada__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>