force-app/main/default/objects/Voo__c/listViews/AlteracaoCoordenadas_Voo.listView-meta.xml
<ListView>
    <fullName>AlteracaoCoordenadas_Voo</fullName>
    <filterScope>Queue</filterScope>
    <label>Alteração de Coordenadas</label>
    <queue>AlteracaoCoordenadas</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>